<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview"
    android:padding="10dp"
    android:layout_margin="2dp"
    app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/titlu"
                android:layout_marginBottom="3dp"
                android:paddingStart="5dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/black"
                android:text="@string/titlu"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/descriere"
                android:ellipsize="end"
                android:layout_marginBottom="3dp"
                android:maxLines="1"
                android:paddingStart="5dp"
                android:textStyle="italic"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/descriere"
                tools:ignore="RtlSymmetry" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/stire"
                android:ellipsize="end"
                android:layout_marginBottom="3dp"
                android:maxLines="2"
                android:paddingStart="5dp"
                android:textStyle="normal"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/stire"
                tools:ignore="RtlSymmetry" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/data"
                android:ellipsize="end"
                android:layout_marginBottom="3dp"
                android:maxLines="2"
                android:paddingStart="5dp"
                android:textStyle="italic"
                android:textSize="11sp"
                android:textColor="@color/black"
                android:text="@string/data"
                tools:ignore="RtlSymmetry" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/autor"
                    android:paddingStart="5dp"
                    android:ellipsize="end"
                    android:gravity="start"
                    android:text="@string/autor"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <Button
                    android:id="@+id/butonStire"
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_marginRight="0dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/style_completare"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:paddingLeft="12dp"
                    android:layout_marginLeft="-10dp"
                    android:text="Vezi știrea completă  "
                    android:textColor="@color/black"
                    android:textSize="10dp"
                    android:textStyle="italic"
                    app:backgroundTint="@null"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />
            </LinearLayout>
        </LinearLayout>
</androidx.cardview.widget.CardView>