<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Creare_cont">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="370dp"
        android:layout_height="465dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.454">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutNume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:background="@color/white"
            android:hint="@string/nume"
            app:layout_constraintEnd_toEndOf="parent"
            app:hintTextColor="@color/main"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nume"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:cursorVisible="true"
                android:paddingLeft="5dp"
                android:textCursorDrawable="@null"
                android:textColor="@color/black"
                android:background="@drawable/style_completare"
                android:drawableEnd="@drawable/ic_nume"
                android:fontFamily="@font/poppinsmedium"
                tools:targetApi="jelly_bean" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPrenume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/white"
            android:hint="@string/prenume"
            app:hintTextColor="@color/main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNume">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/prenume"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/style_completare"
                android:drawableEnd="@drawable/ic_prenume"
                android:cursorVisible="true"
                android:textCursorDrawable="@null"
                android:paddingLeft="5dp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppinsmedium"
                tools:targetApi="jelly_bean" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/email"
            app:hintTextColor="@color/main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPrenume">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/style_completare"
                android:drawableEnd="@drawable/ic_email"
                android:fontFamily="@font/poppinsmedium"
                android:cursorVisible="true"
                android:textCursorDrawable="@null"
                android:paddingLeft="5dp"
                android:textColor="@color/black"
                tools:targetApi="jelly_bean" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/utilizator"
            app:hintTextColor="@color/main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/utilizator"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/style_completare"
                android:drawableEnd="@drawable/ic_user"
                android:cursorVisible="true"
                android:textCursorDrawable="@null"
                android:textColor="@color/black"
                android:paddingLeft="5dp"
                android:fontFamily="@font/poppinsmedium"
                tools:targetApi="jelly_bean" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/parola"
            app:hintTextColor="@color/main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutUsername"
            tools:layout_editor_absoluteX="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/parola"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/style_completare"
                android:drawableEnd="@drawable/ic_password"
                android:fontFamily="@font/poppinsmedium"
                android:cursorVisible="true"
                android:textCursorDrawable="@null"
                android:paddingLeft="5dp"
                android:textColor="@color/black"
                android:inputType="textPassword"
                tools:targetApi="jelly_bean" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutBatalion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/batalion"
            app:helperText="@string/batalion"
            app:helperTextTextColor="@color/main"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword"
            tools:ignore="MissingConstraints">

            <Spinner
                android:id="@+id/batalion"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/style_spinner"
                android:fontFamily="@font/poppinsmedium"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutFacultate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/facultate"
            app:helperText="@string/facultate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:helperTextTextColor="@color/main"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutBatalion"
            app:layout_constraintVertical_bias="0.0">

            <Spinner
                android:id="@+id/facultate"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/style_spinner"
                android:fontFamily="@font/poppinsmedium"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutFacultate" />

        <Button
            android:id="@+id/buttonSignUp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="111dp"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/style_button"
            android:text="@string/sign_up"
            android:paddingLeft="12dp"
            android:textSize="18sp"
            app:barrierMargin="@dimen/cardview_default_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.884"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progress" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="412dp"
        android:layout_height="106dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/illustration"
        tools:ignore="ContentDescription,NotSibling" />

    <TextView
        android:id="@+id/autentificare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/auten"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.0"
        tools:targetApi="jelly_bean" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="453dp"
        android:layout_height="36dp"
        android:fontFamily="@font/poppinsbold"
        android:gravity="center"
        android:text="@string/creare_contt"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:targetApi="jelly_bean" />

</androidx.constraintlayout.widget.ConstraintLayout>