<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Autentificare">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        tools:layout_editor_absoluteX="0dp">

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutParola"
            tools:ignore="NotSibling" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="411dp"
            android:layout_height="111dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/mta"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/buttonLogin"
            style="@style/Widget.AppCompat.Button.Colored"
            android:background="@drawable/style_button"
            android:layout_width="119dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:text="@string/log_in"
            android:textSize="18sp"
            android:paddingLeft="12dp"
            app:barrierMargin="@dimen/cardview_default_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.897"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutParola" />


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="410dp"
            android:layout_height="116dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/illustration"
            tools:ignore="ContentDescription,MissingConstraints" />

        <TextView
            android:id="@+id/crearecont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/creeaza"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            tools:ignore="MissingConstraints"
            tools:targetApi="jelly_bean" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutParola"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="32dp"
            android:hint="@string/parola"
            app:hintTextColor="@color/main"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutUtilizator"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/parola"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:drawableEnd="@drawable/ic_password"
                android:fontFamily="@font/poppinsmedium"
                android:cursorVisible="true"
                android:textCursorDrawable="@null"
                android:paddingLeft="5dp"
                android:textColor="@color/black"
                android:background="@drawable/style_completare"
                android:inputType="textPassword"
                tools:targetApi="jelly_bean" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/poppinsbold"
            android:gravity="center"
            android:text="@string/autentificare"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:ignore="NotSibling,RtlHardcoded"
            tools:targetApi="jelly_bean" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutUtilizator"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="16dp"
            android:hint="@string/utilizator"
            app:hintTextColor="@color/main"
            android:fadeScrollbars="true"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/utilizator"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:cursorVisible="true"
                android:textCursorDrawable="@null"
                android:paddingLeft="5dp"
                android:textColor="@color/black"
                android:background="@drawable/style_completare"
                android:drawableEnd="@drawable/ic_user"
                android:fontFamily="@font/poppinsmedium"
                tools:targetApi="jelly_bean" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>